--- a/css/style.css
+++ b/css/style.css
@@ -28,11 +28,12 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 300px;
+    min-height: 300px;
 }
 .logo{
     font-size: 24px;
     color: #F9FAF8;
+    font-weight: 800;
 }
 ul{
     list-style-type: none;
@@ -47,6 +48,9 @@ a{
 }
 .about{
     width: 400px;
+}
+.about > button{
+    margin-top: 8px;
 }
 .title{
     font-weight: 800;
@@ -63,7 +67,7 @@ button{
     border-radius: 5px;
     padding: 4px 8px;
     font-weight: bold;
-    margin-top: 8px;
+    cursor: pointer;
 }
 img{
     width: 300px;
