--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,27 @@ img{
     color: #1F2937;
     text-align: center;
 }
-.quote{
+.quote-wrap{
     background-color: #E5E7EB;
+    height: 350px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.quote{
+    width: 1000px;
+    display: flex;
+    flex-direction: column;
+}
+.quote-text{
+    color: #1F2937;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300;  
+}
+.author{
+    font-size: 18px;
+    font-weight: bold;
+    color: black;
+    align-self: flex-end;
 }
