--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    min-height: 300px;
+    height: 400px;
 }
 .logo{
     font-size: 24px;
@@ -56,7 +56,7 @@ a{
     color: #F9FAF8;
     font-size: 48px;
 }
-.text, a{
+.text, li > a{
     font-size: 18px;
 }
 .text{
@@ -76,7 +76,7 @@ img{
     height: 200px;;
 }
 .info{
-    height: 350px;
+    height: 400px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -153,4 +153,13 @@ img{
 }
 .box > button{
     border: 2px solid white;
+}
+.footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 70px;
+}
+.footer-content{
+    text-align: center;
 }
