--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,14 @@ img{
     border-radius: 10px;
     height: 100px;
     width: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.square > p{
+    color: #f69637;
+    margin: 0;
+    font-size: 50px;
 }
 .item{
     width: 105px;
@@ -162,4 +170,7 @@ img{
 }
 .footer-content{
     text-align: center;
+}
+.footer-content a{
+    color: #f69637;
 }
