Use proper elements and add more utility classes
Changed some elements to proper ones (a instead of div when it's
a hyperlink, p instead of div when it's text etc.) and divided
page with header, main, footer and section elements. Also added
more utility classes for colors font sizes and font weights.

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,24 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 /* ------------------
      GLOBAL STYLES 
    ------------------ */
 
 :root{
-    --clr-orange: #f69637;
-    --clr-brown: #372b1f;
+    --clr-primary: #372b1f;
+    --clr-secondary: #f69637;
+    --clr-secondary-dark: #f4800b;
     --clr-dark: #1F2937;
-    --clr-light: #F9FAF8;
     --clr-gray: #E5E7EB;
+    --clr-light: #F9FAF8;
+
+    --fs-small: 1.1rem;
+    --fs-medium: 1.5rem;
+    --fs-large: 2.3rem;
+    --fs-x-large: 3rem;
+
+    --fw-bold: 800;
+    --fw-regular: 300;
 }
 
 *, *::before, *::after {
@@ -28,87 +39,52 @@ html{
     height: -webkit-fill-available;
 }
 
+h1, h2{
+    margin: 0;
+}
+
 /* ------------------
        TYPOGRAPHY 
    ------------------ */
-
-.text-center{
-    text-align: center;
-}
-
-.logo{
-    font-size: 1.5rem;
-    font-weight: 800;
-}
 
 a{
     text-decoration: none;
     color: inherit;
 }
 
-.title{
-    font-weight: 800;
-    font-size: 3rem;
-}
-
-.text, li > a{
-    font-size: 1.1rem;
-}
-
-.info-header{
-    font-size: 2.3rem;
-    font-weight: 800;
-}
-
-.quote-text{
-    font-size: 2.3rem;
-    font-style: italic;
-    font-weight: 300;  
-}
-
-.author{
-    font-size: 1.1rem;
-    font-weight: bold;
-    align-self: flex-end;
-}
-
-.box-header{
-    font-weight: 800;
+li > a{
+    font-size: var(--fs-small);
 }
 
 /* ------------------
          LAYOUT 
    ------------------ */
 
-.header-wrap{
+.primary-header{
     display: flex;
     justify-content: center;
-    flex: 5;
 }
 
-.header{
+.container{
     display: flex;
     flex-direction: column;
     overflow-x: hidden;
     padding-bottom: 1em;
 }
 
-.top{
+.header, .hero{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0 1em;
+}
+
+.header{
     height: 50px;
 }
 
-.bottom{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.hero{
     min-height: 400px;
-}
-
-.top, .bottom{
-    padding: 0 1em;
 }
 
 .about{
@@ -121,7 +97,7 @@ a{
 
 img{
     width: 300px;
-    height: 200px;;
+    height: 200px;
 }
 
 .info{
@@ -129,8 +105,6 @@ img{
     flex-direction: column;
     justify-content: center;
     gap: 2em;
-    height: 50vh;
-    flex: 4 0;
     padding: clamp(1em, 5vw, 2em) 0;
 }
 
@@ -147,7 +121,7 @@ img{
     border-radius: 10px;
     height: 100px;
     width: 100px;
-    border: 5px solid var(--clr-orange);
+    border: 5px solid var(--clr-secondary);
 }
 
 .square > p{
@@ -163,7 +137,7 @@ img{
     display: flex;
     justify-content: center;
     align-items: center;
-    flex: 4 0 350px;
+    padding: clamp(1em, 5vw, 2em) 0;
 }
 
 .quote{
@@ -173,11 +147,15 @@ img{
     width: min(800px, 50vw);
 }
 
+.author{
+    align-self: flex-end;
+}
+
 .signup{
     display: flex;
     justify-content: center;
     align-items: center;
-    flex: 3 0 300px;
+    padding: clamp(1em, 5vw, 2em) 0;
 }
 
 .box{
@@ -189,12 +167,12 @@ img{
     border-radius: 5px;
 }
 
-.footer{
+footer{
     padding: .5em 0;
 }
 
 p{
-    margin: 0.2em;
+    margin: 0.2em 0;
 }
 
 /* ------------------
@@ -211,11 +189,16 @@ ul{
 }
 
 button{
-    border: 2px solid var(--clr-orange);
+    border: 2px solid var(--clr-secondary);
     border-radius: 5px;
     padding: 4px 8px;
     font-weight: bold;
     cursor: pointer;
+}
+
+button:hover{
+    background-color: var(--clr-secondary-dark);
+    border-color: var(--clr-secondary-dark);
 }
 
 .box > button{
@@ -223,23 +206,23 @@ button{
 }
 
 /* ------------------
-        COLORING 
+        UTILITY 
    ------------------ */
 
-.bg-clr-orange{
-    background-color: var(--clr-orange);
+.bg-clr-primary{
+    background-color: var(--clr-primary);
 }
 
-.bg-clr-brown{
-    background-color: var(--clr-brown);
+.bg-clr-secondary{
+    background-color: var(--clr-secondary);
 }
 
 .bg-clr-gray{
     background-color: var(--clr-gray);
 }
 
-.text-clr-orange{
-    color: var(--clr-orange);
+.text-clr-secondary{
+    color: var(--clr-secondary);
 }
 
 .text-clr-dark{
@@ -250,12 +233,44 @@ button{
     color: var(--clr-light);
 }
 
+.text-center{
+    text-align: center;
+}
+
+.fs-small{
+    font-size: var(--fs-small);
+}
+
+.fs-medium{
+    font-size: var(--fs-medium);
+}
+
+.fs-large{
+    font-size: var(--fs-large);
+}
+
+.fs-x-large{
+    font-size: var(--fs-x-large);
+}
+
+.fw-bold{
+    font-weight: var(--fw-bold);
+}
+
+.fw-regular{
+    font-weight: var(--fw-regular);
+}
+
+.font-italic{
+    font-style: italic;
+}
+
 /* ------------------
       MEDIA QUERIES 
    ------------------ */
 
 @media only screen and (max-width: 1000px){
-    .bottom{
+    .hero{
        flex-direction: column; 
        align-items: center;
        justify-content: center;
