--- a/css/style.css
+++ b/css/style.css
@@ -122,8 +122,7 @@ img{
     justify-content: center;
     align-items: center;
     border-radius: 10px;
-    height: 100px;
-    width: 100px;
+    aspect-ratio: 1 / 1;
     border: 5px solid var(--clr-secondary);
 }
 
@@ -133,7 +132,7 @@ img{
 }
 
 .item{
-    width: 105px;
+    width: 100px;
 }
 
 .quote-wrap{
