--- a/css/style.css
+++ b/css/style.css
@@ -307,6 +307,7 @@ footer{
         flex-direction: column;
         padding: 4rem 2rem;
         transform: translateX(100%);
+        transition: transform 400ms ease-in-out;
     }
     .primary-navigation[data-hidden="false"]{
         transform: translateX(0%);
